# aist_barrett

bhand_msgs/: CMakeLists.txt  package.xml
bhand_msgs/msg/: FingerTipTorques.msg  TactileState.msg  TactileStateArray.msg
bhand_msgs/srv/: FingerPosition.srv  FingerVelocity.srv  GraspPosition.srv  SpreadPosition.srv  SpreadVelocity.srv
wam_demos/: CMakeLists.txt  package.xml
wam_demos/src/: play.cpp  teach.cpp
wam_description/: CMakeLists.txt  package.xml
wam_description/hooks/: wam_description.dsv.in
wam_description/meshes/: ft_sensor.STL
wam_description/urdf/: 4dof_link.urdf  4dof_link.urdf.xacro  barrett_hand.urdf  barrett_hand.urdf.xacro  common.urdf.xacro  fts.urdf  fts.urdf.xacro  mono_camera.urdf.xacro  palm_tactile_sensors.urdf.xacro  stereo_camera.urdf  stereo_camera.urdf.xacro  transmission.urdf.xacro  wam.urdf.xacro  wam_base.urdf  wam_base.urdf.xacro  wrist_link.urdf.xacro
wam_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
wam_moveit_config/config/: 4dof_controllers.yaml  4dof_hand_controllers.yaml  4dof_hand_joint_limits.yaml  4dof_hand_ros_controllers.yaml  4dof_joint_limits.yaml  4dof_ros_controllers.yaml  7dof_controllers.yaml  7dof_hand_controllers.yaml  7dof_hand_joint_limits.yaml  7dof_hand_ros_controllers.yaml  7dof_joint_limits.yaml  7dof_ros_controllers.yaml  bhand.srdf  bhand_config.rviz  bhand_controllers.yaml  bhand_fts.srdf  bhand_joint_limits.yaml  bhand_ros_controllers.yaml  kinematics.yaml  ompl_planning.yaml  wam4dof.srdf  wam4dof_fts.srdf  wam4dof_hand.srdf  wam4dof_hand_fts.srdf  wam7dof.srdf  wam7dof_fts.srdf  wam7dof_hand.srdf  wam7dof_hand_fts.srdf  wam_camera_config.rviz  wam_config.rviz  wam_stereo_camera_config.rviz
wam_moveit_config/launch/: gazebo.launch  move_group.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  trajectory_execution.launch.xml  wam4dof_moveit_controller_manager.launch.xml  wam_moveit.launch
wam_msgs/: CMakeLists.txt  package.xml
wam_msgs/msg/: RTAngularVelocity.msg  RTCartOrientation.msg  RTCartPose.msg  RTCartPosition.msg  RTJointPositions.msg  RTJointVelocities.msg  RTLinearVelocity.msg  RTLinearandAngularVelocity.msg
wam_msgs/srv/: CartOrientationMove.srv  CartPositionMove.srv  JointMove.srv  VelocityLimit.srv
wam_node/: CMakeLists.txt  package.xml
wam_node/launch/: perception_palm_mono.launch.py  perception_palm_stereo.launch.py  wam_node.launch.py
wam_node/src/: bhand_publishers.h  bhand_services.h  custom_systems.h  fts_node.h  wam_node.cpp  wam_publishers.h  wam_services.h  wam_subscribers.h
wam_sim/: CMakeLists.txt  package.xml
wam_sim/config/: bhand_config.rviz  wam_config.rviz
wam_sim/launch/: wam_empty_sim.launch.py  wam_sim.launch.py
wam_sim/launch/wam4dof/: wam4dof.urdf
wam_sim/launch/wam7dof/: barrett_hand.urdf  wam7dof.urdf  wam7dof_fts.urdf  wam7dof_hand.urdf  wam7dof_hand_fts.urdf
