<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wam_demos</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="aakash.r@barrett.com">robot</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <exec_depend>rclcpp</exec_depend>

  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>std_srvs</depend>
  <depend>builtin_interfaces</depend>
  <depend>wam_msgs</depend>
  <depend>bhand_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
