<?xml version="1.0"?>
<package format="3">

  <name>wam_msgs</name>
  <version>0.0.0</version>
  <description>The wam_srvs package</description>
  <maintainer email="support@barrett.com">robot</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <!-- <buildtool_depend>rosidl_default_generators</buildtool_depend> -->
  <!-- <exec_depend>rosidl_default_runtime</exec_depend> -->
  <depend>rosidl_default_generators</depend>
  <depend>rosidl_default_runtime</depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
